--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "apiai": "^2.0.5",
     "express": "^4.13.4",
+    "node-uuid": "^1.4.7",
     "socket.io": "^1.4.6"
   },
   "devDependencies": {},
