--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "apiai": "^2.0.5",
+    "basic-auth": "^1.0.4",
     "express": "^4.13.4",
     "jsonfile": "^2.3.1",
     "node-uuid": "^1.4.7",
